--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,8 +15,10 @@
     <link rel="stylesheet" href="css/projects.css">
     <link rel="stylesheet" href="css/sections.css">
 
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <div id="particles-js" class="particles-js"></div>
     <div class="nav-container">
@@ -58,7 +61,8 @@
         <div class="header-content">
             <img src="images/1.JPG" alt="">
             <h1 class="header-title animate__animated animate__fadeInDown">Moizuddin Mohammad Mujahid Rashid</h1>
-<p class="header-subtitle animate__animated animate__fadeInUp">Web Developer, wordpress Web Designer & UI/UX Designer</p>
+            <p class="header-subtitle animate__animated animate__fadeInUp">Web Developer, wordpress Web Designer & UI/UX
+                Designer</p>
             <div class="header-buttons">
                 <a href="#projects" class="btn btn-primary">View Portfolio</a>
                 <a href="#contact" class="btn btn-outline">Contact Me</a>
@@ -79,8 +83,12 @@
                 </div>
                 <div class="about-text">
                     <h3>Professional Web Developer & Designer</h3>
-                    <p>Dedicated and results-oriented Software Engineer and Data Science Student with expertise in web development, UI/UX design, and data science. Skilled in front-end and back-end technologies including HTML, CSS, JavaScript, TypeScript, PHP, React.js, Next.js, Node.js, Nest.js, Tailwind CSS, Bootstrap, MySQL, PostgreSQL, and more.</p>
-                    <p>Experienced in WordPress website design using Elementor, crafting responsive and visually appealing websites tailored for businesses and individuals.</p>
+                    <p>Dedicated and results-oriented Software Engineer and Data Science Student with expertise in web
+                        development, UI/UX design, and data science. Skilled in front-end and back-end technologies
+                        including HTML, CSS, JavaScript, TypeScript, PHP, React.js, Next.js, Node.js, Nest.js, Tailwind
+                        CSS, Bootstrap, MySQL, PostgreSQL, and more.</p>
+                    <p>Experienced in WordPress website design using Elementor, crafting responsive and visually
+                        appealing websites tailored for businesses and individuals.</p>
                     <div class="about-info">
                         <div class="info-item">
                             <span>Name:</span>
@@ -144,18 +152,41 @@
                             <div class="skill-progress" style="width: 75%"></div>
                         </div>
                     </div>
+                    <div class="skill-item">
+                        <div class="skill-info">
+                            <span>PERN & MERN Stack Development(Learning)</span>
+                            <span>50%</span>
+                        </div>
+                        <div class="skill-bar">
+                            <div class="skill-progress" style="width: 50% "></div>
+                        </div>
+                    </div>
+
                 </div>
                 <div class="skills-text">
                     <h3>My Expertise</h3>
-                    <p>With a strong foundation in both design and development, I create digital experiences that are not only visually appealing but also highly functional and user-friendly.</p>
-                    <p>My technical skills span across multiple disciplines allowing me to handle projects from concept to completion.</p>
+                    <p>With a strong foundation in both design and development, I create digital experiences that are
+                        not only visually appealing but also highly functional and user-friendly.</p>
+                    <p>My technical skills span across multiple disciplines allowing me to handle projects from concept
+                        to completion.</p>
                     <div class="skills-tags">
                         <span>HTML5</span>
                         <span>CSS3</span>
+                        <span>Tailwind</span>
+                        <span>NestJs</span>
+                        <span>NextJs</span>
+                        <span>TypeScript</span>
+                        <span>Postgres</span>
+                        <span>C#</span>
                         <span>JavaScript</span>
+                        <span>Java</span>
+                        <span>C++</span>
+                        <span>C</span>
                         <span>React</span>
                         <span>Node.js</span>
                         <span>UI/UX</span>
+                        <span>Canva</span>
+                        <span>Figmas</span>
                         <span>WordPress</span>
                         <span>Python</span>
                     </div>
@@ -279,7 +310,8 @@
             <div class="footer-content">
                 <div class="footer-about">
                     <h3>Mujahid Raj</h3>
-                    <p>Passionate about frontend and backend development, UI/UX design, software engineering, and WordPress. Let's create something amazing together!</p>
+                    <p>Passionate about frontend and backend development, UI/UX design, software engineering, and
+                        WordPress. Let's create something amazing together!</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-github"></i></a>
                         <a href="#"><i class="fab fa-linkedin"></i></a>
@@ -335,4 +367,5 @@
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="js/main.js"></script>
 </body>
+
 </html>
