--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
             <div class="dropdown">
                 <button class="dropbtn">Download Resume</button>
                 <div class="dropdown-content">
-                    <a href="CV/Mujahid Raj CV Original.pdf" download>📄 PDF File</a>
-                    <a href="CV/Mujahid Raj CV Original.docx" download>📝 Word File</a>
-                    <a href="CV/Mujahid Raj CV Image.jpg" download>🖼️ Image File</a>
+                    <a href=CV/CV/Mujahid Raj CV Original.pdf" download>📄 PDF File</a>
+                    <a href="CV/CV/Mujahid Raj CV Original.docx" download>📝 Word File</a>
+                    <a href="CV/CV/Mujahid Raj CV Image.jpg" download>🖼️ Image File</a>
                 </div>
             </div>
             <button class="hire-me-button" id="hireMeBtn">Hire Me</button>
