--- a/certificate/index.html
+++ b/certificate/index.html
@@ -29,10 +29,22 @@
                         <img src="images/PMF.png" alt="Certificate 3">
                     </div>
                     <div class="certificate-details">
-                        <h2>JavaScript Workshop for Absolute Beginners</h2>
+                        <h2>Project management Fundamental</h2>
                         <p>Issued by: IBM SkillBuild</p>
                         <p>Date: March 2025</p>
                         <p>Description: A course for the Project management Process.</p>
+                    </div>
+                </div>
+
+                <div class="certificate">
+                    <div class="certificate-image">
+                        <img src="images/UX.png" alt="Certificate 3">
+                    </div>
+                    <div class="certificate-details">
+                        <h2>User Experience Fundamental</h2>
+                        <p>Issued by: IBM SkillBuild</p>
+                        <p>Date: April 2025</p>
+                        <p>Description: A course for the UX design.</p>
                     </div>
                 </div>
 
