--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -170,14 +170,14 @@
 <header class="nav-glass fixed w-full z-50">
     <div class="container mx-auto px-4 py-3">
         <div class="flex justify-between items-center">
-            <div class="flex items-center">
-                <div class="w-10 h-10 rounded-full bg-blue-500 flex items-center justify-center mr-3 neon-border">
-                    <span class="text-white font-bold text-lg">
-                        <img class="rounded-[50px]" src="images/Mujahid Raj.png" alt="Mujahid Raj">
-                    </span>
-                </div>
-                <span class="text-xl font-bold neon-text">Mujahid Raj</span>
-            </div>
+            <a href="../index.html"><div class="flex items-center">
+                    <div class="w-10 h-10 rounded-full bg-blue-500 flex items-center justify-center mr-3 neon-border">
+                        <span class="text-white font-bold text-lg">
+                            <img class="rounded-[50px]" src="images/Mujahid Raj.png" alt="Mujahid Raj">
+                        </span>
+                    </div>
+                    <span class="text-xl font-bold neon-text">Mujahid Raj</span>
+                </div></a>
 
             <!-- Desktop Navigation -->
             <nav class="glass-card px-5 py-3 rounded-[50px] hidden md:flex space-x-8">
