--- a/contact/index.html
+++ b/contact/index.html
@@ -159,8 +159,8 @@
 </head>
 <body>
     <!-- Header with Navigation -->
-<header class="nav-glass fixed w-full z-50">
-    <div class="container mx-auto px-4 py-3">
+<header class="nav-glass relative  w-full z-50">
+    <div class="container glass-card top-0 left-0 right-0 fixed mx-auto px-4 py-3">
         <div class="flex justify-between items-center">
             <div class="flex items-center">
                 <div class="w-10 h-10 rounded-full bg-blue-500 flex items-center justify-center mr-3 neon-border">
